--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     },
     "devDependencies": {
         "@types/copy-paste": "1.1.30",
-        "@types/mocha": "^2.2.42",
-        "@types/node": "7.0.52",
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.6"
+        "@types/mocha": "5.2.0",
+        "@types/node": "10.1.1",
+        "typescript": "2.8.3",
+        "vscode": "1.1.17"
     },
     "dependencies": {
         "copy-paste": "1.3.0",
-        "css-to-react-native": "2.0.4"
+        "css-to-react-native": "2.2.0"
     }
 }
